--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "npm run dev",
+    "build": "npm run build",
+    "preview": "npm run preview"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
